--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+
+
+        <nav>
+            <ul>
+                <li><a href="Page1.html">Page1</a></li>
+                <li><a href="Page2.html">Page2</a></li>
+            </ul>
+        </nav>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9Z6rtYo1qBU?si=Pn1gzDia4ra6ug7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>       
     
         <p>Manufacturing magnate Italian Ferruccio Lamborghini founded the company in 1963 with the objective of producing a refined grand touring car to compete with offerings from established marques such as Ferrari. The company's first models, such as the 350 GT, were released in the mid-1960s. Lamborghini was noted for the 1966 Miura sports coupé, which used a rear mid-engine, rear-wheel drive layout.</p>
